Allow <input type="file" multiple /> to be used on Android JB MR2+.

Android JellyBean MR2 (API 18) introduced an Intent extra which tells the
file picker that it can select multiple files. Each of the files will be
returned as a ClipData entry on the completed Intent.

BUG=348912

Review URL: https://codereview.chromium.org/443683002

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@287777 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 98dd29fe9a7564ce1e5104df87d769fe2a740a83