chrome/android/javatests/src/org/chromium/chrome/browser/input/SelectFileDialogTest.java
@@ -30,6 +30,7 @@ public class SelectFileDialogTest extends ChromeShellTestBase {
             "content=\"width=device-width, initial-scale=2.0, maximum-scale=2.0\" /></head>" +
             "<body><form action=\"about:blank\">" +
             "<input id=\"input_file\" type=\"file\" /><br/>" +
+            "<input id=\"input_file_multiple\" type=\"file\" multiple /><br />" +
             "<input id=\"input_image\" type=\"file\" accept=\"image/*\" capture /><br/>" +
             "<input id=\"input_audio\" type=\"file\" accept=\"audio/*\" capture />" +
             "</form>" +
@@ -94,6 +95,16 @@ public class SelectFileDialogTest extends ChromeShellTestBase {
         assertTrue("SelectFileDialog never sent an intent.",
                 CriteriaHelper.pollForCriteria(new IntentSentCriteria()));
         assertEquals(Intent.ACTION_CHOOSER, mActivityWindowAndroidForTest.lastIntent.getAction());
+        resetActivityWindowAndroidForTest();
+
+        DOMUtils.clickNode(this, mContentViewCore, "input_file_multiple");
+        assertTrue("SelectFileDialog never sent an intent.",
+                CriteriaHelper.pollForCriteria(new IntentSentCriteria()));
+        assertEquals(Intent.ACTION_CHOOSER, mActivityWindowAndroidForTest.lastIntent.getAction());
+        Intent contentIntent = (Intent)
+                mActivityWindowAndroidForTest.lastIntent.getParcelableExtra(Intent.EXTRA_INTENT);
+        assertNotNull(contentIntent);
+        assertTrue(contentIntent.hasExtra(Intent.EXTRA_ALLOW_MULTIPLE));
         resetActivityWindowAndroidForTest();
 
         DOMUtils.clickNode(this, mContentViewCore, "input_image");
